# simplest_crossplatform_helloworld

./: .gitignore  LICENSE  README.md  build.sh  build_sch_android.sh  build_sch_ios.sh
sch/: CMakeLists.txt  Logger.cpp  Logger.hpp
sdk/android/: settings.gradle
sdk/android/app/: build.gradle
sdk/android/app/src/androidTest/java/com/example/zhanghui/schdemo/: ExampleInstrumentedTest.java
sdk/android/app/src/main/: AndroidManifest.xml
sdk/android/app/src/main/java/com/example/zhanghui/schdemo/: LogUtil.java  MainActivity.java
sdk/android/app/src/main/jni/: CMakeLists.txt  log_jni.cpp
sdk/android/app/src/main/res/values/: strings.xml  themes.xml
sdk/android/app/src/main/res/values-night/: themes.xml
sdk/android/app/src/test/java/com/example/zhanghui/schdemo/: ExampleUnitTest.java
sdk/android/gradle/wrapper/: gradle-wrapper.properties
sdk/ios/schdemo/schdemo/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
sdk/ios/schdemo/schdemo.xcodeproj/: project.pbxproj
sdk/ios/schdemo/schdemo.xcodeproj/project.xcworkspace/xcuserdata/zhanghui43.xcuserdatad/: UserInterfaceState.xcuserstate
sdk/ios/schdemo/schdemo.xcodeproj/xcuserdata/zhanghui43.xcuserdatad/xcschemes/: xcschememanagement.plist
